[package]
name = "eth_pairings"
version = "0.5.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
description = "EIP1962 reference implementation"
homepage = "https://github.com/matter-labs/eip1962"
license = "Apache-2.0"
exclude = [
    "*.sh",
    "src/test",
    "src/bench"
]

# [lib]
# name = "eth_pairings"
# crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
byteorder = "1.3"
eth_pairings_repr_derive = {version = "0.2.0", path = "repr_derive"}
fixed_width_field = {version = "0.1", path = "fixed_width_field" }
fixed_width_group_and_loop = {version = "0.1", path = "fixed_width_group_and_loop" }
static_assertions = "1.1.*"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = {version = "1.0", optional = true }
once_cell = {version = "1.*", optional = true }
num-bigint = {version = "0.2", optional = true }
num-traits = {version = "0.2", optional = true }

[dev-dependencies]
num-bigint = "0.2"
num-traits = "0.2"
num-integer = "0.1"
hex = "0.4"
rand = "0.7"
rand_xorshift = "0.2"
csv = "1"
pbr = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bn = { git = "https://github.com/paritytech/bn", default-features = false }
rayon = "1.*"
indicatif = {version = "*", features = ["with_rayon"]}
parity-crypto = {version = "0.4", features = ["publickey"]}
ethereum-types = "0.8"
keccak-hash = "0.4"
eip-152 = {path = "./aux/EIP-152"}

[features]
default = ["eip_2537", "gas_metering", "mappings"]
benchmarks = []
mappings = ["once_cell", "num-bigint", "num-traits"]
gas_metering = ["serde", "serde_json", "once_cell"]
c_api = []
gas_metering_mode = []
fuzzing_mode = []
external_tests = []
eip_2537 = ["mappings"]

# [profile.dev]
# incremental = false

# [profile.test]
# incremental = false

[profile.release]
incremental = false

# [profile.bench]
# incremental = false