[package]
name = "eth_pairings"
version = "0.6.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
description = "EIP1962 reference implementation"
homepage = "https://github.com/matter-labs/eip1962"
license = "Apache-2.0"
exclude = [
    "*.sh",
    "src/test",
    "src/bench"
]

[lib]
name = "eth_pairings"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
byteorder = "1.3"
eth_pairings_repr_derive = {version = "0.2.0", path = "repr_derive"}
fixed_width_field = {version = "0.1", path = "fixed_width_field" }
fixed_width_group_and_loop = {version = "0.1", path = "fixed_width_group_and_loop" }
static_assertions = "1.1.*"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = {version = "1.0", optional = true }
once_cell = {version = "1.*", optional = true }
num-bigint = {version = "0.2", optional = true }
num-traits = {version = "0.2", optional = true }

[dev-dependencies]
num-bigint = { default-features = false, version = "0.2"}
num-traits = { default-features = false, version = "0.2"}
num-integer = { default-features = false, version = "0.1"}
hex = { version = "0.4"}
rand = { version = "0.7"}
rand_xorshift = { version = "0.2"}
csv = { version = "1"}
pbr = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
bn = { git = "https://github.com/paritytech/bn", default-features = false }
rayon = "1.*"
indicatif = {version = "*", features = ["with_rayon"]}
parity-crypto = {version = "0.4", features = ["publickey"]}
ethereum-types = "0.8"
keccak-hash = "0.4"
sp-std = { version = "2.0.0-rc6", default-features = false }

[features]
default = ["std", "eip_2537", "gas_metering", "mappings", "eip_2357_c_api", "eip_196", "eip_196_c_api"]
benchmarks = []
mappings = ["once_cell", "num-bigint", "num-traits"]
gas_metering = ["serde", "serde_json", "once_cell"]
c_api = []
gas_metering_mode = []
fuzzing_mode = []
external_tests = []
eip_2537 = ["mappings"]
eip_2357_c_api = ["eip_2537"]
eip_196 = ["once_cell", "num-bigint", "num-traits"]
eip_196_c_api = ["eip_196"]
std = []
[profile.release]
incremental = false