[package]
name = "eth_pairings_repr_derive"
version = "0.2.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
description = "Fixed size big integer representation derivation macro"
homepage = "https://github.com/matter-labs/eip1962"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
byteorder = { version = "1.3", default-features = false }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = "1"
sp-std = { version = "2.0.0-rc6", default-features = false }

[features]
std = []