[package]
name = "eth_pairings_repr_derive"
version = "0.2.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
edition = "2018"
description = "Fixed size big integer representation derivation macro"
homepage = "https://github.com/matter-labs/eip1962"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
byteorder = "1.3"
proc-macro2 = "1"
quote = "1"
syn = "1"

[features] 
default = []
asm = []