[package]
description = "Large fixed-size integer arithmetic of a healthy person"
homepage = "https://github.com/matter-labs/"
repository = "https://github.com/matter-labs/"
license = "MIT/Apache-2.0"
name = "simple_uint"
version = "0.1.0"
authors = ["Alex Vlasov <alex.m.vlasov@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
crunchy = { version = "0.2.2", default-features = false, features = ["limit_128"], optional = true }
qc = { package = "quickcheck", version = "0.9.0", optional = true }
rand = { version = "0.7.2", default-features = false, optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
static_assertions = "1.1"

[features]
# default = ["std", "unroll"]
# default = ["std"]
default = ["unroll"]
unroll = ["crunchy"]
std = ["byteorder/std", "rustc-hex/std", "crunchy/std"]
quickcheck = ["qc", "rand"]

[[test]]
name = "uint_tests"
required-features = ["std"]

# [dev-dependencies]
# criterion = "0.3.0"
# num-bigint = "0.2.3"

# [target.'cfg(unix)'.dev-dependencies]
# rug = { version = "1.6.0", default-features = false, features = ["integer"] }

# [[bench]]
# name = "bigint"
# harness = false
